methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: not found: value vuBiscuit
  vuBiscuit() = false
  ^MethodsReturning:5: error: not found: value vuBiscuit
  while(vuBiscuit()){
        ^MethodsReturning:8: error: not found: value vuBiscuit
       vuBiscuit() = true
       ^MethodsReturning:5: error: type mismatch;
 found   : Unit
 required: Boolean
  while(vuBiscuit()){
  ^