methods.returning.MethodsReturning.scala.code

def haveBaggle():Boolean = {
  
  vuBiscuit() = false
  while(vuBiscuit()){
    for (c <- 1 to 6) {
     avance();if (estSurBiscuit()){
       vuBiscuit() = true
     } 
    
    }
    
  }
}